<resources>
    <string name="app_name">App Portfolio</string>
    <string name="my_apps_title">My Nanodegree Apps</string>
    <string name="popular_movies_app_name">Popular Movies</string>
    <string name="stock_hawk_app_name">Stock Hawk</string>
    <string name="build_bigger_app_name">Build it Bigger</string>
    <string name="material_app_name">Make Your App Material</string>
    <string name="ubiquitous_app_name">Go Ubiquitous</string>
    <string name="capstone_app_name">Capstone: My Own App</string>
</resources>
