<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.pintsofwine.appportfolio.MainActivity">

    <TextView
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_apps_title"
        android:layout_marginBottom="12dp"
        android:textColor="@color/defaultTextColor"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/popular_movies_button"
        android:text="@string/popular_movies_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/stock_hawk_button"
        android:text="@string/stock_hawk_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/build_bigger_button"
        android:text="@string/build_bigger_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/material_button"
        android:text="@string/material_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/ubiquitous_button"
        android:text="@string/ubiquitous_app_name"/>

    <Button
        style="@style/UdacityButton"
        android:id="@+id/capstone_button"
        android:text="@string/capstone_app_name"
        android:background="@color/capstoneRed"
        android:onClick="displayMessage"/>
    
</LinearLayout>
